compiler/testData/diagnostics/testsWithJsStdLib/name/jsNameAndNamedNative.kt
// !DIAGNOSTICS:  -DEPRECATION
@native("B")
<!JS_NAME_PROHIBITED_FOR_NAMED_NATIVE!>@JsName("C")<!>
class A
